--- a/beh_modelling/dn01_behavioral_modelling.ipynb
+++ b/beh_modelling/dn01_behavioral_modelling.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (1) The probabilistic reversal learning task\n",
+    "### The probabilistic reversal learning task\n",
     "\n",
     "During the fMRI scanning session participants carried out the PRL task in two conditions: (1) reward-seeking and (2) punishment-avoiding. Participants were instructed to repeatedly choose between yellow and blue boxes in order to collect as many points as possible in the reward-seeking condition or loose as little points as possible in the punishment-avoiding condition (**Fig. 1**). One of the boxes had the probability to be correct (rewarding or non-punishing depending on the condition) p = 0.8 and the other one p = 0.2. This reward contingency changed four times throughout each task condition. Reward probabilities were unknown to the subjects and had to be learned from experience. Each box had also associated reward magnitude, randomly selected at the beginning of each trial. These reward magnitudes represented as numbers within the box indicated possible gain in the reward-seeking condition or possible loss in the punishment-avoiding condition. To be successful in this task decision maker had to correctly estimate reward probabilities from experience and take into account reward magnitudes to choose an option with higher expected value. \n",
     "    \n",
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (2) Processing of log dataframe\n",
+    "### Processing of log dataframe\n",
     "\n",
     "Each row of a dataframe represents *single trial*.\n",
     "Description of useful dataframe columns:\n",
@@ -250,7 +250,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (3) Visualisation of subject responses"
+    "### Visualisation of subject responses\n",
+    "Function `plot_response()` creates friendly visualisation of subject responses throughout the task. Visualisation consists of:\n",
+    "- **top panel**: represents internal task structure, blue and yellow blocks show stable phases for which box reward probabilities do not change (color is coding more profitable side; blue=left, yellow=right), dark blue line show reward magnitude for the left box, yellow and blue dots show rewarded / punished sides\n",
+    "- **middle panel**: represents subject's reaction times (red line) and account balance (black dashed line) throughout the task, red coloring also highlight trials with missing response\n",
+    "- **bottom panel**: represetnes subject's trialwise responses and outcome of each trial (green dot = rewarded / not punished; red dot = not rewarded / punished)"
    ]
   },
   {
@@ -283,9 +287,10 @@
     "\n",
     "    x_trials = np.arange(1, N_trials+1)\n",
     "\n",
-    "    fig, (ax1, ax2, ax3) = plt.subplots(3, 1, sharex=True, figsize=(20, 10), facecolor='w')\n",
+    "    fig, (ax1, ax2, ax3) = plt.subplots(3, 1, sharex=True, \n",
+    "                                        figsize=(20, 10), facecolor='w')\n",
     "\n",
-    "    ### Subplot 1 ###############################################################\n",
+    "    ### Subplot 1 ###########################################################\n",
     "    # True reward contingencies (more profitable side)\n",
     "    for i in range(N_blocks):\n",
     "\n",
@@ -298,7 +303,8 @@
     "            color=col, alpha=.5)\n",
     "\n",
     "    # Rewarded / punished side\n",
-    "    ax1.scatter(x_trials, df.rwd*.9, c=df.rwd, cmap='cividis', vmin=-1.5, vmax=1.5)\n",
+    "    ax1.scatter(x_trials, df.rwd*.9, c=df.rwd, \n",
+    "                cmap='cividis', vmin=-1.5, vmax=1.5)\n",
     "    ax1.set_ylim(-1, 1)\n",
     "    ax1.set_yticklabels([])\n",
     "\n",
@@ -312,7 +318,7 @@
     "    else:               \n",
     "        ax1b.set_ylim(0, 50)\n",
     "\n",
-    "    ### Subplot 2 ###############################################################\n",
+    "    ### Subplot 2 ###########################################################\n",
     "    # Misses\n",
     "    for miss in np.argwhere(np.isnan(rt)):\n",
     "\n",
@@ -334,7 +340,7 @@
     "    ax2b.plot(x_trials, df.acc_after_trial, 'k--')\n",
     "    ax2b.set_ylabel('account balance')\n",
     "\n",
-    "    ### Subplot 3 ###############################################################\n",
+    "    ### Subplot 3 ###########################################################\n",
     "    ax3.scatter(x_trials, df.response*.75, c=df['won_bool'], \n",
     "                cmap='RdYlGn', vmin=-.2, vmax=1.2)\n",
     "    ax3.set_ylim(-1, 1)\n",
@@ -371,20 +377,27 @@
     "\n",
     "#### Assumptions:\n",
     "\n",
-    "- experienced utility is proportional to displayed reward magnitude: \n",
-    "$$u(x) = x$$\n",
-    "- values (reflecting beliefs about probability) are learned with simple delta learning rule (TD model):\n",
-    "$$V(a_t)=V(a_{t-1})+ \\alpha [R-V(a_{t-i})]$$\n",
-    "- choice probabilites are computed with degenerate softmax with infinitely high inverse temperature (parsimoneous approach introduced by *Summerfield et al. 2011*):\n",
-    "$$p(a)=\\frac{V(a)}{V(a)+V(b)}$$\n",
+    "1. experienced utility is some function of displayed reward magnitude: \n",
+    "    - simple model: $u(x) = x$ \n",
+    "    - complex model: $u(x) = x^{\\delta} \\quad if \\quad x>0$ or $u(x) = -\\gamma |x|^{\\delta} \\quad if \\quad x>0$\n",
+    "2. values (reflecting beliefs about probability) are learned with simple delta learning rule (TD model):\n",
+    "    - $V(a_t)=V(a_{t-1})+ \\alpha [R-V(a_{t-i})]$\n",
+    "3. choice probabilites are probabilistic functions of expected utilities:\n",
+    "    - degenerate model: $p(a)=\\frac{EV(a)}{EV(a)+EV(b)}$ (parsimoneous approach introduced by *Summerfield et al. 2011*)\n",
+    "    - full softmax model: $p(a)=\\frac{\\exp(\\theta EV(a))}{\\exp(\\theta EV(a)) + \\exp(\\theta EV(b))}$\n",
     "\n",
-    "Free parameters:\n",
+    "#### Free parameters:\n",
     "\n",
-    "- $\\alpha \\in [0, 0.5]$: learning rate (modelling learning rate above half would result in model selecting previously rewarded / not punished option which is not realistic \n",
+    "- $\\alpha \\in [0, 1]$: learning rate (modelling learning rate above half would result in model selecting previously rewarded / not punished option which is not realistic \n",
+    "- $\\gamma \\in [0, \\infty]$: loss aversion parameter\n",
+    "- $\\delta \\in [0, 1]$: risk aversion parameter\n",
+    "- $\\theta \\in [0, \\infty]$: inverse temperature for softmax function\n",
     "\n",
-    "Questions:\n",
+    "#### Model variations:\n",
     "\n",
-    "- simultaneous update of both values?\n"
+    "- model 1: (k=1 parameter) simple utility model, degenerate model for choice probabilities\n",
+    "- model 2: (k=2 parameters) simple utility model, full softmax model\n",
+    "- model 3: (k=4 parameters) complex utility model, full softmax model\n"
    ]
   },
   {
@@ -513,7 +526,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Show example model fit for models 1 and 2"
+    "### Show example model fit for models 1 and 2\n",
+    "Models are fitted to subject responses using $G^2$ which is a measure of badness-of-fit derived from log likelyhood. In this section model 1 and 2 are fitted for all possible parameters sampled from parameter space. Both task conditions are fitted separately for single subject. Finally, $G^2$  function is visualised in the parameter space."
    ]
   },
   {
@@ -614,7 +628,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model fitting for single subject responses"
+    "### Model fitting for single subject responses\n",
+    "In this section model parameters are optimized for explaining subject responses. Behavioral responsed are pooled across both task conditions.  "
    ]
   },
   {
@@ -697,7 +712,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model comparison for single subject"
+    "### Model comparison for single subject\n",
+    "In this section three models are compared with respect to their Akaike Information Criterion (AIC score). AIC enables comparision of models with different number of free parameters. AIC is defined as:\n",
+    "$$AIC = G^2 + 2k$$ "
    ]
   },
   {
@@ -733,13 +750,6 @@
     "ax.set_yticks(range(3))\n",
     "ax.set_yticklabels(['model1', 'model2', 'model3'])\n",
     "ax.grid()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Distribution of model parameters across subjects"
    ]
   }
  ],
