finished defacing script

--- a/fmri_preparation/dn_fp_02_deface.ipynb
+++ b/fmri_preparation/dn_fp_02_deface.ipynb
@@ -9,14 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import os\n",
     "\n",
     "bids_path = '/home/connectomics/Pulpit/mounted_data/BONNA_decide_net/data/main_fmri_study'\n",
     "\n",
+    "img_files_path = \"/home/connectomics/Pulpit/mounted_data/BONNA_decide_net/\"\\\n",
+    "                 \"data/main_fmri_study/derivatives/img_files\"\n",
+    "\n",
+    "with open(img_files_path, 'r') as f:\n",
+    "    img_files = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Find files\n",
     "t1w_files = []\n",
     "\n",
@@ -64,22 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ellipsis"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "..."
+    "for subject in list(img_files.keys()):\n",
+    "    \n",
+    "    oldfile = os.path.join(\n",
+    "        img_files[subject][\"subject_path_anat\"], \n",
+    "        img_files[subject][\"t1w_bids_name\"] + \".nii.gz\"\n",
+    "    )\n",
+    "    newfile = os.path.join(\n",
+    "        img_files[subject][\"subject_path_anat\"], \n",
+    "        img_files[subject][\"t1w_bids_name\"] + \"_defaced.nii.gz\"\n",
+    "    )\n",
+    "\n",
+    "    os.remove(oldfile)\n",
+    "    os.rename(newfile, oldfile)"
    ]
   }
  ],
