working matjags model

--- a/behavioral_analysis/dn_ba_04_bayesian_modelling.ipynb
+++ b/behavioral_analysis/dn_ba_04_bayesian_modelling.ipynb
@@ -23,6 +23,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.io\n",
+    "\n",
+    "scipy.io.savemat('behavioral_data_clean_all.mat', dict(beh=beh))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,28 +75,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert data into tensor variables."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "actions = (beh[:, 0, :, 4].T + 1) / 2\n",
-    "actions[actions == 0.5] = 0\n",
+    "# actions[actions == 0.5] = 0\n",
     "\n",
     "# Convert behavioral data into tensor variable\n",
+    "# Shape: (110, 32)\n",
     "magna = theano.shared(np.asarray(beh[:, 0, :, 2].T, dtype='int32'))\n",
     "magnb = theano.shared(np.asarray(beh[:, 0, :, 3].T, dtype='int32'))\n",
     "rewards = theano.shared(np.asarray((beh[:, 0, :, 1].T + 1) / 2, dtype='int32'))\n",
     "actions = theano.shared(actions)\n",
     "\n",
-    "trials, subjects = np.meshgrid(range(n_trials), range(n_subjects))           # is it used???\n",
+    "# is it used???\n",
+    "trials, subjects = np.meshgrid(range(n_trials), range(n_subjects))         \n",
     "trials = T.as_tensor_variable(trials.T)        \n",
     "subjects = T.as_tensor_variable(subjects.T)            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +159,6 @@
     "#################################\n",
     "### Test update_vals function ###\n",
     "#################################\n",
-    "\n",
     "alpha = 0.2\n",
     "valb0 = 0.5 * T.ones([n_subjects])\n",
     "\n",
@@ -174,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
