--- a/behavioral_analysis/dn_ba_07_beta_distribution.ipynb
+++ b/behavioral_analysis/dn_ba_07_beta_distribution.ipynb
@@ -194,6 +194,20 @@
     "        color=\"#E1D5E7\", linewidth=2, edgecolor='#9673A6');\n",
     "ax.set_xlabel(\"inverse temperature \" + r\"$\\beta$\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "N = 1000\n",
+    "beta = np.random.uniform(-5, 5, N)\n",
+    "x    = np.random.normal(0, 50, N)\n",
+    "\n",
+    "alpha = "
+   ]
   }
  ],
  "metadata": {
