--- a/behavioral_analysis/dn_ba_03_single_subject_model_fit.ipynb
+++ b/behavioral_analysis/dn_ba_03_single_subject_model_fit.ipynb
@@ -40,8 +40,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import json\n",
-    "from utils import *\n",
-    "\n",
+    "from behavioral_models import *\n",
     "# plt.style.use('seaborn-ticks')"
    ]
   },
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +247,8 @@
     "def cost_model2(x):\n",
     "    '''Optimization function for model 2.'''\n",
     "    g_rew = g_square(beh, meta, subject, 0, \n",
+    "                     model2(beh, meta, subject, 0, x[0], x[1])[2])\n",
+    "    g_pun = g_square(beh, meta, subject, 1,\n",
     "                     model2(beh, meta, subject, 0, x[0], x[1])[2])\n",
     "    return g_rew\n",
     "\n",
