sanity check code cleanup, added description and masking of indivudal EPI files

--- a/activation_analysis/dn_aa_01_sanity_check_button_activations_first.ipynb
+++ b/activation_analysis/dn_aa_01_sanity_check_button_activations_first.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,161 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analyzing sub-m02...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:268: DeprecationWarning: object of type <class 'numpy.float64'> cannot be safely interpreted as an integer.\n",
+      "  frame_times.max() * (1 + 1. / (n - 1)), n_hr)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:55: DeprecationWarning: object of type <class 'float'> cannot be safely interpreted as an integer.\n",
+      "  time_stamps = np.linspace(0, time_length, float(time_length) / dt)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:272: RuntimeWarning: invalid value encountered in less\n",
+      "  if (onsets < frame_times[0] + min_onset).any():\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/utils.py:262: UserWarning: Matrix is singular at working precision, regularizing...\n",
+      "  warn('Matrix is singular at working precision, regularizing...')\n",
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:268: DeprecationWarning: object of type <class 'numpy.float64'> cannot be safely interpreted as an integer.\n",
+      "  frame_times.max() * (1 + 1. / (n - 1)), n_hr)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:55: DeprecationWarning: object of type <class 'float'> cannot be safely interpreted as an integer.\n",
+      "  time_stamps = np.linspace(0, time_length, float(time_length) / dt)\n",
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analyzing sub-m03...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:268: DeprecationWarning: object of type <class 'numpy.float64'> cannot be safely interpreted as an integer.\n",
+      "  frame_times.max() * (1 + 1. / (n - 1)), n_hr)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:55: DeprecationWarning: object of type <class 'float'> cannot be safely interpreted as an integer.\n",
+      "  time_stamps = np.linspace(0, time_length, float(time_length) / dt)\n",
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:268: DeprecationWarning: object of type <class 'numpy.float64'> cannot be safely interpreted as an integer.\n",
+      "  frame_times.max() * (1 + 1. / (n - 1)), n_hr)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:55: DeprecationWarning: object of type <class 'float'> cannot be safely interpreted as an integer.\n",
+      "  time_stamps = np.linspace(0, time_length, float(time_length) / dt)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/utils.py:262: UserWarning: Matrix is singular at working precision, regularizing...\n",
+      "  warn('Matrix is singular at working precision, regularizing...')\n",
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analyzing sub-m04...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:268: DeprecationWarning: object of type <class 'numpy.float64'> cannot be safely interpreted as an integer.\n",
+      "  frame_times.max() * (1 + 1. / (n - 1)), n_hr)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:55: DeprecationWarning: object of type <class 'float'> cannot be safely interpreted as an integer.\n",
+      "  time_stamps = np.linspace(0, time_length, float(time_length) / dt)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:272: RuntimeWarning: invalid value encountered in less\n",
+      "  if (onsets < frame_times[0] + min_onset).any():\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/utils.py:262: UserWarning: Matrix is singular at working precision, regularizing...\n",
+      "  warn('Matrix is singular at working precision, regularizing...')\n",
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:268: DeprecationWarning: object of type <class 'numpy.float64'> cannot be safely interpreted as an integer.\n",
+      "  frame_times.max() * (1 + 1. / (n - 1)), n_hr)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:55: DeprecationWarning: object of type <class 'float'> cannot be safely interpreted as an integer.\n",
+      "  time_stamps = np.linspace(0, time_length, float(time_length) / dt)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:272: RuntimeWarning: invalid value encountered in less\n",
+      "  if (onsets < frame_times[0] + min_onset).any():\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/utils.py:262: UserWarning: Matrix is singular at working precision, regularizing...\n",
+      "  warn('Matrix is singular at working precision, regularizing...')\n",
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analyzing sub-m05...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:268: DeprecationWarning: object of type <class 'numpy.float64'> cannot be safely interpreted as an integer.\n",
+      "  frame_times.max() * (1 + 1. / (n - 1)), n_hr)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:55: DeprecationWarning: object of type <class 'float'> cannot be safely interpreted as an integer.\n",
+      "  time_stamps = np.linspace(0, time_length, float(time_length) / dt)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/utils.py:262: UserWarning: Matrix is singular at working precision, regularizing...\n",
+      "  warn('Matrix is singular at working precision, regularizing...')\n",
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:268: DeprecationWarning: object of type <class 'numpy.float64'> cannot be safely interpreted as an integer.\n",
+      "  frame_times.max() * (1 + 1. / (n - 1)), n_hr)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:55: DeprecationWarning: object of type <class 'float'> cannot be safely interpreted as an integer.\n",
+      "  time_stamps = np.linspace(0, time_length, float(time_length) / dt)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/utils.py:262: UserWarning: Matrix is singular at working precision, regularizing...\n",
+      "  warn('Matrix is singular at working precision, regularizing...')\n",
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analyzing sub-m06...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:268: DeprecationWarning: object of type <class 'numpy.float64'> cannot be safely interpreted as an integer.\n",
+      "  frame_times.max() * (1 + 1. / (n - 1)), n_hr)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:55: DeprecationWarning: object of type <class 'float'> cannot be safely interpreted as an integer.\n",
+      "  time_stamps = np.linspace(0, time_length, float(time_length) / dt)\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/hemodynamic_models.py:272: RuntimeWarning: invalid value encountered in less\n",
+      "  if (onsets < frame_times[0] + min_onset).any():\n",
+      "/home/kmb/.local/lib/python3.6/site-packages/nistats/utils.py:262: UserWarning: Matrix is singular at working precision, regularizing...\n",
+      "  warn('Matrix is singular at working precision, regularizing...')\n",
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/nilearn/_utils/cache_mixin.py:232: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if (memory.cachedir is None and memory_level is not None\n"
+     ]
+    }
+   ],
    "source": [
     "for sub_idx in range(n_subjects):\n",
     "\n",
@@ -214,7 +368,7 @@
     "        }\n",
     "        conditions['lbp'][list(design_matrix.columns).index('lbp')] = 1\n",
     "        conditions['rbp'][list(design_matrix.columns).index('rbp')] = 1\n",
-    "        left_minus_right = conditions['rbp'] - conditions['lbp']\n",
+    "        left_minus_right = conditions['lbp'] - conditions['rbp']\n",
     "\n",
     "        # Compute statistical map and save it\n",
     "        z_map = fmri_glm.compute_contrast(\n",
