modified pc_factorial to include redundant model indicators

--- a/behavioral_analysis/matjags-dn/dn_bm_01_convergence.ipynb
+++ b/behavioral_analysis/matjags-dn/dn_bm_01_convergence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "path_full = 'data/pc_factorial_run1.mat'\n",
     "path_pi = 'data/pc_factorial_run1_pi_only.mat'\n",
     "path_pd = 'data/pc_factorial_run1_pd_only.mat'\n",
+    "path_seq = 'data/pc_seq_run1.mat'\n",
+    "path_seq_group = 'data/pc_seq_run1_group.mat'\n",
     "\n",
     "n_subjects = 32"
    ]
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +54,7 @@
     "    for node in mat['stats']['Rhat'].item().dtype.names:\n",
     "        \n",
     "        rhats = mat['stats']['Rhat'].item()[node].item()\n",
+    "        rhats = np.array(rhats)\n",
     "        ind_failed = rhats > 1.1 \n",
     "        \n",
     "        if np.any(ind_failed):\n",
@@ -228,5 +231,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
