added functions to calculate PE regressors

--- a/behavioral_analysis/matjags-dn/dn_bm_04_parameter_estimation.ipynb
+++ b/behavioral_analysis/matjags-dn/dn_bm_04_parameter_estimation.ipynb
@@ -357,6 +357,16 @@
     "plt.tight_layout()\n",
     "fig.savefig('pygures/posterior_alpha_pd_correlations.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save point estimates to file\n",
+    "np.save('data/alpha_pd_mle', alpha_pd_mle)"
+   ]
   }
  ],
  "metadata": {
