added full PE activation analysis

--- a/behavioral_analysis/dn_ba_03_single_subject_model_fit.ipynb
+++ b/behavioral_analysis/dn_ba_03_single_subject_model_fit.ipynb
@@ -33,14 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import json\n",
-    "from behavioral_models import *\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/code')\n",
+    "from dn_utils.behavioral_models import *\n",
+    "\n",
     "# plt.style.use('seaborn-ticks')"
    ]
   },
@@ -352,5 +356,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
