--- a/behavioral_analysis/dn_ba_04_bayesian_modelling.ipynb
+++ b/behavioral_analysis/dn_ba_04_bayesian_modelling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,11 @@
     "import matplotlib.pyplot as plt\n",
     "import theano\n",
     "import theano.tensor as T\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/code')\n",
+    "from dn_utils.behavioral_models import *"
    ]
   },
   {
@@ -42,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,18 +61,8 @@
    ],
    "source": [
     "beh_path = \"/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/\" \\\n",
-    "           \"data/main_fmri_study/behavioral/behavioral_data_clean_all.npy\"\n",
-    "beh_meta_path = beh_path.replace('npy', 'json')\n",
-    "\n",
-    "# Load behavioral data\n",
-    "beh = np.load(beh_path)\n",
-    "with open(beh_meta_path, 'r') as f:\n",
-    "    meta = json.loads(f.read())\n",
-    "    \n",
-    "print(\"Shape of beh array:\", beh.shape)\n",
-    "print(\"Conditions\", [(i, cond) for i, cond in enumerate(meta['dim2'])])\n",
-    "print(\"Columns:\", [(i, col) for i, col in enumerate(meta['dim4'])])\n",
-    "\n",
+    "           \"data/main_fmri_study/sourcedata/behavioral\" \n",
+    "beh, meta = load_behavioral_data(root=beh_path)\n",
     "n_subjects = beh.shape[0]\n",
     "n_conditions = beh.shape[1]\n",
     "n_trials = beh.shape[2]"
@@ -456,5 +450,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
