--- a/behavioral_analysis/matjags-dn/dn_bm_01_convergence.ipynb
+++ b/behavioral_analysis/matjags-dn/dn_bm_01_convergence.ipynb
@@ -18,10 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_full = 'data/pc_factorial_run1.mat'\n",
+    "path_full = 'data/pc_factorial_run1.mat'         \n",
     "path_pi = 'data/pc_factorial_run1_pi_only.mat'\n",
     "path_pd = 'data/pc_factorial_run1_pd_only.mat'\n",
     "path_seq = 'data/pc_seq_trick_run1.mat'\n",
+    "path_pdci = 'data/pdci_run1.mat'\n",
     "\n",
     "n_subjects = 32"
    ]
@@ -108,14 +109,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Sequential HLM ===\n",
+      "=== HM PDCI ===\n",
+      "Looking for failed convergence...\n",
+      "[OK] node(s) theta converged\n",
+      "[OK] node(s) alpha_pdci converged\n",
+      "[OK] node(s) beta_pdci converged\n",
+      "[OK] node(s) a_alpha_pdci converged\n",
+      "[OK] node(s) b_alpha_pdci converged\n",
+      "[OK] node(s) mu_beta_pdci converged\n",
+      "[OK] node(s) sigma_beta_pdci converged\n",
+      "[OK] node(s) deviance converged\n",
+      "\n",
+      "Summary:\n",
+      "100.00% nodes converged\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('=== HM PDCI ===')\n",
+    "mat = scipy.io.loadmat(path_pdci, variable_names=['stats'], squeeze_me=True)\n",
+    "report_convergence(mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== HLM Sequential ===\n",
       "Looking for failed convergence...\n",
       "[--] node(s) z failed to converge\n",
       "     – 2/32 fails, max = 1.11, median = 1.11\n",
@@ -171,7 +205,7 @@
     }
    ],
    "source": [
-    "print('=== Sequential HLM ===')\n",
+    "print('=== HLM Sequential ===')\n",
     "mat = scipy.io.loadmat(path_seq, variable_names=['stats'], squeeze_me=True)\n",
     "report_convergence(mat)\n",
     "plot_z_convergence(mat['stats']['Rhat'].item()['z'].item())"
