refactored activation analysis to include all cases within single notebook, changed behavioral models to incorporate value regressors, added hlm models

--- a/activation_analysis/dn_aa_01_first_level.ipynb
+++ b/activation_analysis/dn_aa_01_first_level.ipynb
@@ -13,24 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kmb/anaconda3/lib/python3.7/site-packages/sklearn/externals/joblib/__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
-      "  warnings.warn(msg, category=DeprecationWarning)\n",
-      "/home/kmb/anaconda3/lib/python3.7/site-packages/duecredit/utils.py:32: DeprecationWarning: dist() and linux_distribution() functions are deprecated in Python 3.5\n",
-      "  and platform.linux_distribution()[0] == 'debian' \\\n",
-      "/home/kmb/anaconda3/lib/python3.7/site-packages/duecredit/io.py:18: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working\n",
-      "  from collections import defaultdict, Iterator\n",
-      "/home/kmb/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -53,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,8 +158,9 @@
     "    mask_files.append(layout.get(**mask_filter))\n",
     "    \n",
     "# Load model-based regresssor(s)\n",
-    "pe_regressors_path = 'data/pe_regressors.npy'\n",
-    "pe_regressors = np.load(pe_regressors_path)"
+    "epw_regressors = np.load('data/epw_regressors.npy')\n",
+    "erew_regressors = np.load('data/erew_regressors.npy')\n",
+    "pe_regressors = np.load('data/pe_regressors.npy')"
    ]
   },
   {
@@ -194,13 +180,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Root folder for storing output nistats derivatives\n",
     "out_root = \"/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/data/\"\\\n",
     "           \"main_fmri_study/derivatives/nistats\"\n",
+    "\n",
+    "# Directiories for different contrasts \n",
+    "# TODO: remove it later\n",
+    "out_dir_btn = os.path.join(out_root, \"buttonpress\")\n",
+    "out_dir_pesign = os.path.join(out_root, \"pesign\")\n",
+    "out_dir_pefull = os.path.join(out_root, \"pefull\")\n",
+    "out_dir_pesurp = os.path.join(out_root, \"pesurp\")\n",
+    "out_dir_epw = os.path.join(out_root, \"epw\")\n",
+    "out_dir_erew = os.path.join(out_root, \"erew\")\n",
     "\n",
     "# Specify GLM\n",
     "fmri_glm = FirstLevelModel(\n",
@@ -228,56 +223,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir_btn = os.path.join(out_root, \"buttonpress\")\n",
-    "out_dir_pesign = os.path.join(out_root, \"pesign\")\n",
-    "out_dir_pefull = os.path.join(out_root, \"pefull\")\n",
-    "out_dir_pesurp = os.path.join(out_root, \"pesurp\")\n",
-    "\n",
     "for sub_idx in range(n_subjects):\n",
     "\n",
     "    for con_idx in range(n_conditions):\n",
     "\n",
-    "    # Load subject data\n",
-    "    anat_img = nib.load(anat_files[sub_idx])\n",
-    "    fmri_img = nib.load(fmri_files[con_idx][sub_idx])\n",
-    "    fmri_glm.mask = nib.load(mask_files[0][0])\n",
-    "    confounds = pd.read_csv(conf_files[con_idx][sub_idx], sep='\\t')\n",
-    "    confounds = confounds[confounds_relevant]\n",
-    "    confounds.index = frame_times # Standard time representation (in seconds)\n",
+    "        # Load subject data\n",
+    "        anat_img = nib.load(anat_files[sub_idx])\n",
+    "        fmri_img = nib.load(fmri_files[con_idx][sub_idx])\n",
+    "        fmri_glm.mask = nib.load(mask_files[0][0])\n",
+    "        confounds = pd.read_csv(conf_files[con_idx][sub_idx], sep='\\t')\n",
+    "        confounds = confounds[confounds_relevant]\n",
+    "        confounds.index = frame_times # Standard time representation (in seconds)\n",
     "\n",
-    "    # Setup events\n",
-    "    onset_dec = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_dec')] + \\\n",
-    "                beh[sub_idx, con_idx, :, meta['dim4'].index('rt')]\n",
-    "    onset_out = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_out')]\n",
+    "        # Setup events\n",
+    "        resp_type = beh[sub_idx, con_idx, :, meta['dim4'].index('response')]\n",
+    "        onset_dec_phase = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_dec')] \n",
+    "        onset_dec = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_dec')] + \\\n",
+    "                    beh[sub_idx, con_idx, :, meta['dim4'].index('rt')]\n",
+    "        onset_out = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_out')]\n",
     "\n",
-    "    resp_type = beh[sub_idx, con_idx, :, meta['dim4'].index('response')]\n",
-    "    pe_regressor = pe_regressors[sub_idx, con_idx, resp_type != 0]\n",
+    "        pe_regressor = pe_regressors[sub_idx, con_idx, resp_type != 0]\n",
+    "        epw_regressor = epw_regressors[sub_idx, con_idx, resp_type != 0]\n",
+    "        erew_regressor = erew_regressors[sub_idx, con_idx, resp_type != 0]\n",
     "\n",
-    "    #---> choice phase regressors\n",
-    "    reg_lbp = Regressor('lbp', frame_times, onset_dec[resp_type==-1])\n",
-    "    reg_rbp = Regressor('rbp', frame_times, onset_dec[resp_type==1])\n",
-    "    reg_miss = Regressor('miss', frame_times, onset_dec[resp_type==0])\n",
+    "        #---> choice phase regressors\n",
+    "        reg_lbp = Regressor('lbp', frame_times, onset_dec[resp_type==-1])\n",
+    "        reg_rbp = Regressor('rbp', frame_times, onset_dec[resp_type==1])\n",
+    "        reg_miss = Regressor('miss', frame_times, onset_dec[resp_type==0])\n",
+    "        reg_epw = Regressor(\n",
+    "            'epw', \n",
+    "            frame_times, \n",
+    "            onset_dec_phase[resp_type != 0],\n",
+    "            duration=beh[sub_idx, con_idx, resp_type != 0, meta['dim4'].index('rt')],\n",
+    "            modulation=epw_regressor\n",
+    "        )\n",
+    "        reg_erew = Regressor(\n",
+    "            'erew', \n",
+    "            frame_times, \n",
+    "            onset_dec_phase[resp_type != 0],\n",
+    "            duration=beh[sub_idx, con_idx, resp_type != 0, meta['dim4'].index('rt')],\n",
+    "            modulation=erew_regressor\n",
+    "        )\n",
     "\n",
-    "    #---> outcome phase regressors\n",
-    "    reg_pe_full = Regressor(\n",
-    "        'pe_full', frame_times, onset_out[resp_type != 0], \n",
-    "        modulation=pe_regressor\n",
-    "    )\n",
-    "    reg_pe_sign = Regressor(\n",
-    "        'pe_sign', frame_times, onset_out[resp_type != 0],\n",
-    "        modulation=np.sign(pe_regressor)\n",
-    "    )\n",
-    "    reg_pe_surp = Regressor(\n",
-    "        'pe_surp', frame_times, onset_out[resp_type != 0], \n",
-    "        modulation=np.abs(pe_regressor)\n",
-    "    )\n",
-    "    reg_pe_miss = Regressor(\n",
-    "        'pe_miss', frame_times, onset_out[resp_type == 0]\n",
-    "    )\n",
-    "    \n",
-    "    ############################################################################\n",
-    "    ############### paste rest of the code from below cells here ###############\n",
-    "    ############################################################################"
+    "        #---> outcome phase regressors\n",
+    "        reg_pe_full = Regressor(\n",
+    "            'pe_full', frame_times, onset_out[resp_type != 0], \n",
+    "            modulation=pe_regressor\n",
+    "        )\n",
+    "        reg_pe_sign = Regressor(\n",
+    "            'pe_sign', frame_times, onset_out[resp_type != 0],\n",
+    "            modulation=np.sign(pe_regressor)\n",
+    "        )\n",
+    "        reg_pe_surp = Regressor(\n",
+    "            'pe_surp', frame_times, onset_out[resp_type != 0], \n",
+    "            modulation=np.abs(pe_regressor)\n",
+    "        )\n",
+    "        reg_pe_miss = Regressor(\n",
+    "            'pe_miss', frame_times, onset_out[resp_type == 0]\n",
+    "        )\n",
+    "\n",
+    "        ############################################################################\n",
+    "        ############### paste rest of the code from below cells here ###############\n",
+    "        ############################################################################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Expected probability of winning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dm, conditions = my_make_first_level_design_matrix(\n",
+    "    [reg_lbp, reg_rbp, reg_epw], confounds)\n",
+    "\n",
+    "# Fit GLM\n",
+    "fmri_glm = fmri_glm.fit(fmri_img, design_matrices=dm)\n",
+    "\n",
+    "# Define contrast\n",
+    "conditions['epw']\n",
+    "\n",
+    "# Compute statistical map and save it\n",
+    "z_map = fmri_glm.compute_contrast(\n",
+    "    conditions['epw'],\n",
+    "    stat_type='t')\n",
+    "\n",
+    "z_map_fname = f\"sub-{meta['dim1'][sub_idx]}_\" + \\\n",
+    "              f\"task-prl{meta['dim2'][con_idx]}_desc-epw_tmap\"\n",
+    "# nib.save(z_map, os.path.join(out_dir_epw, z_map_fname))"
    ]
   },
   {
@@ -406,6 +445,40 @@
     "z_map_fname = f\"sub-{meta['dim1'][sub_idx]}_\" + \\\n",
     "              f\"task-prl{meta['dim2'][con_idx]}_desc-pesurp_tmap\"\n",
     "# nib.save(z_map, os.path.join(out_dir_pesurp, z_map_fname))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explore correlation between regressors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate correlation between expected probability of winning and expected value\n",
+    "reg_corr = np.zeros((n_subjects, n_conditions))\n",
+    "\n",
+    "for sub_idx in range(n_subjects):\n",
+    "    for con_idx in range(n_conditions):\n",
+    "\n",
+    "        # Load decision phase regressors\n",
+    "        onset_dec = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_dec')] + \\\n",
+    "            beh[sub_idx, con_idx, :, meta['dim4'].index('rt')]\n",
+    "        resp_type = beh[sub_idx, con_idx, :, meta['dim4'].index('response')]\n",
+    "        epw_regressor = epw_regressors[sub_idx, con_idx, resp_type != 0]\n",
+    "        erew_regressor = erew_regressors[sub_idx, con_idx, resp_type != 0]\n",
+    "        \n",
+    "        # Grab correlation between decision phase regressors\n",
+    "        reg_epw = Regressor('epw', frame_times, onset_dec[resp_type!=0], \n",
+    "                            modulation=epw_regressor)\n",
+    "        reg_erew = Regressor('erew', frame_times, onset_dec[resp_type!=0],\n",
+    "                             modulation=erew_regressor)\n",
+    "        reg_corr[sub_idx, con_idx] = Regressor.corrcoef(reg_epw, reg_erew)"
    ]
   }
  ],
